Make Course an interface, in preparation for other types of Courses